# CodeArchitect-AI

./: README.md
devagent/: README.md  app.py  code_analisis.ipynb  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  store.py
devagent/faiss_code_index/: index.faiss  index.pkl
devagent/src/devagent/: crew.py  helper.py
devagent/src/devagent/config/: agents.yaml  tasks.yaml
devagent/src/devagent/tools/: custom_tool.py
