[project]
name = "devagent"
version = "0.1.0"
description = "DevAgent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
devagent = "devagent.main:run"
run_crew = "devagent.main:run"
train = "devagent.main:train"
replay = "devagent.main:replay"
test = "devagent.main:test"
run_with_trigger = "devagent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
